# MediCareAI

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PROPOSAL.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: alembic.ini  medicareai.db-shm  pyproject.toml  run_dev.py  token.txt
backend/app/: __init__.py  main.py
backend/app/agent/: __init__.py
backend/app/api/: deps.py
backend/app/api/mcp/: __init__.py  security.py
backend/app/api/mcp/adapters/: __init__.py  (+1 more)
backend/app/api/v1/: __init__.py  admin.py  agents.py  auth.py  conversations.py  doctor.py  doctor_consultations.py  doctor_messages.py  documents.py  email.py  graphrag.py  health.py  knowledge.py  llm.py  medical_cases.py  mobile.py  notifications.py  patient.py  patient_messages.py  rag.py  upload.py  users.py
backend/app/core/: __init__.py  config.py  encryption.py  logging.py  rate_limit.py  security.py
backend/app/db/: __init__.py  redis_client.py  session.py  sqlite_compat.py
backend/app/db/migrations/: env.py
backend/app/models/: __init__.py  agent.py  audit.py  config.py  doctor_decision.py  email.py  interview.py  knowledge.py  mcp.py  medical_case.py  message.py  notification.py  patient_profile.py  rag.py  user.py
backend/app/schemas/: audit.py  auth.py  config.py  doctor_decision.py  email.py  knowledge.py  medical_case.py  message.py  notification.py  patient.py
backend/app/scripts/: seed_knowledge.py
backend/app/services/: agents.py  audit.py  care_plan_service.py  config.py  doctor_decision.py  document_parser.py  document_router.py  email_service.py  embedding.py  external_search.py  graphrag.py  knowledge_agent.py  llm.py  medication_service.py  message_service.py  multimodal_parser.py  notification_bus.py  orchestrator.py  profile_service.py  rag.py  reminder_engine.py  reranker.py  semantic_cache.py  sms_service.py  token_budget.py
backend/app/tasks/: __init__.py  agent.py  audit.py  celery_app.py  doctor.py  health.py
backend/app/tools/: __init__.py  base.py  medical.py  registry.py
backend/scripts/: setup.sh
backend/tests/: conftest.py  test_admin.py  test_dynamic_config.py  test_health.py  test_semantic_cache.py  test_token_budget.py
(+128 files in other folders)
