[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yizhiyun"
version = "0.1.0"
description = "医智云·AI医疗协作平台: Multi-Agent Autonomous Medical Collaboration System"
readme = "../README.md"
license = { text = "MIT" }
authors = [
    { name = "Houge Langley", email = "houge@medcareai.dev" },
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.2.0",
    "celery>=5.4.0",
    "httpx>=0.27.0",
    "openai>=1.55.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "email-validator>=2.2.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "sentry-sdk[fastapi]>=2.19.0",
    "pgvector>=0.3.6",
    "cryptography>=42.0.0",
    "aiosmtplib>=3.0.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "tencentcloud-sdk-python-sms>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "factory-boy>=3.3.0",
    "faker>=33.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.3.0",
]
